[project]
name = "hack"
version = "0.1.0"
description = ""
authors = [
    {name = "nagraver",email = "ttolla25@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "smolagents (>=1.13.0,<2.0.0)",
    "huggingface-hub (>=0.30.2,<0.31.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "langchain-qdrant (>=0.2.0,<0.3.0)",
    "langchain-text-splitters (>=0.3.8,<0.4.0)",
    "qdrant-client (>=1.13.3,<2.0.0)",
    "gradio (>=5.25.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
