[project]
name = "hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.44",
    "gradio>=5.25.0",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.51",
    "langchain-docling>=0.2.0",
    "langchain-huggingface>=0.1.2",
    "langchain-openai>=0.3.12",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.8",
    "langfuse>=2.60.2",
    "openai>=1.73.0",
    "pathlib>=1.0.1",
    "qdrant-client>=1.13.3",
]
